# go-html-boilerplate

./: .gitignore  .travis.yml  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  config.yml  crypto.go  go.mod  go.sum  main.go  main_test.go
.github/: dependabot.yml
.github/workflows/: ci.yml
assets/: BUILD.bazel  bindata.go
templates/: index.html
